<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_32sdp"
    tools:context=".ui.fragments.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extra_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/string_tlc_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/_210sdp"
            android:layout_height="@dimen/_170sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_tlc_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:text="@string/string_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/color_txt_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/color_txt_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/remember_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/string_remember_me"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="287dp"
                tools:layout_editor_absoluteY="455dp" />

            <CheckBox
                android:id="@+id/checkboxRememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="343dp"
                tools:layout_editor_absoluteY="480dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:text="@string/string_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/string_forgot_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <TextView
            android:id="@+id/tvGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_140sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/string_go_back"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>